<resources>
    <string name="app_name">VZVZ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Главная</string>
    <string name="menu_favorite">Избранное</string>
    <string name="menu_profile">Профиль</string>
    <string name="NickName">Nickname</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="registrationComp">Зарегистрироваться</string>
    <string name="passLogin">Введите логин</string>
    <string name="passPassword">Введите пароль</string>
    <string name="passEmail">Введите email</string>
</resources>